--- a/src/app/identifier/identifier.component.html
+++ b/src/app/identifier/identifier.component.html
@@ -4,7 +4,7 @@
     <div class="mybc-center mybc-login-width" >
     <img id="profile-img" class="profile-img-card" src="assets/images/logo.png" />
     <p></p>
-    <div class="card card-container mybc-font mybc-background mybc-center mybc-login-container">
+    <div class="card card-container mybc-background mybc-center mybc-login-container">
       <p id="profile-name" class="profile-name-card"></p>
       <form class="form-signin">
 <!--      <span>usuario</span> -->
@@ -23,6 +23,7 @@
             </a>
   </div>
   <!-- /card-container -->
+  <!--
   <div class="mybc-lang-container">
     <div id="lang_icon"></div>
     <div id="mybc-lang-select">
@@ -33,6 +34,7 @@
 
     </div>
   </div>
+-->
   <div>
 </div>
 <div class="mdl-cell mdl-cell--hide-phone mdl-cell--2-col-tablet mdl-cell--4-col-desktop"></div>
