--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,13 +1,7 @@
 .Absolute-Center {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  margin: 0 auto;
 }
 
-.Absolute-Center.is-Responsive {
-  width: 50%; 
-  height: 50%;
-  min-width: 200px;
-  max-width: 400px;
-  padding: 40px;
+.dashboard-footer {
+  padding-left: 10px !important;
 }
