--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
 <div class="Absolute-center">
   <router-outlet></router-outlet>
+  <div class="dashboard-footer">
+      <hr style="width: 184px; height: 2px;">
+      <img src="/mybc/assets/images/logoanywhere.svg" style="margin:-28px 0px 0px 0px;width:96px;height:32px;">
+      <img src="/mybc/assets/images/cloudtools.svg" style="margin:-28px 0px 0px 0px;width:48px;height:32px;">
+  </div>
 </div>
