--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -4,7 +4,7 @@
 <div class="container mybc-password mybc-center mybc-password-width">
   <img id="profile-img" class="profile-img-card" src="assets/images/logo.png" />
   <p></p>
-  <div class="card card-container mybc-font mybc-background mybc-center mybc-password-container">
+  <div class="card card-container mybc-background mybc-center mybc-password-container">
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin">
       <!-- <span>contraseña</span> -->
