--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,11 +56,11 @@
         <img src="/mybc/assets/images/voicemail.svg" class="menu-image-voicemail" />
         <div class="menu-title-voicemail">Voicemail</div>
       </a>
-      <!-- <a routerLink="/dashboard/followme" class="mdl-navigation__link">
-        <img src="/mybc/assets/images/followme.png" class="menu-image-followme" />
+      <a routerLink="/dashboard/followme" class="mdl-navigation__link">
+        <img src="/mybc/assets/images/folloeme.svg" class="menu-image-followme" />
         <div class="menu-title-followme">Sigueme</div>
       </a>
-      -->
+
 
       <!-- <a routerLink="/dashboard/setup" class="mdl-navigation__link">
         <img src="/mybc/assets/images/setup.png" class="menu-image-setup" />
