--- a/src/app/identifier/identifier.component.html
+++ b/src/app/identifier/identifier.component.html
@@ -14,7 +14,7 @@
 <!--          <span style="color: white;" [ngClass]="{ 'hide': _uservalid }">{{ _usererror_label}}</span> -->
 <!--        </div> -->
       <p></p>
-      <button class="btn mybc-login-button" type="button" (click)="validateUser()">siguente</button>
+      <button class="btn mybc-login-button flat" type="button" (click)="validateUser()">siguente</button>
     </form>
     <!-- /form -->
     <p></p>
