--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -19,6 +19,9 @@
                 <img src="/mybc/assets/images/contactheader.svg">
                 <!-- <button mdl-button mdl-button-type="icon" (click)="newContact()"><mdl-icon style="font-size:28px;">add</mdl-icon></button> -->
               </div>
+              <div style="display:block; margin: auto;">
+                <mdl-icon (click)="orderBy()" style="cursor:pointer;">sort_by_alpha</mdl-icon>
+              </div>
             </div>
           </th>
           <th width="20%">
