--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -10,7 +10,9 @@
       <!-- <span>contraseña</span> -->
       <!-- <div class="mybc-password-input"> -->
           <mdl-textfield name="_userpassword" floating-label autofocus required [(ngModel)]="_userpassword" class="mdl-texfield mybc-password-input"  label="Contraseña"
-                    type="password" (keyup.enter)="validatePassword()"></mdl-textfield>        
+                    type="password" (keyup.enter)="validatePassword()"></mdl-textfield>      
+          <div *ngIf="!_uservalid"><span>{{ _userlabel_error }}</span></div>
+          <div *ngIf="_err"><span>{{ _errormsg }}</span></div>
      <!--   <input type="password" id="_userpassword" class="mybc-password-input" required autofocus [(ngModel)]="_userpassword" name="_userpassword"> -->
      <!--   <span style="color: white;" [ngClass]="{ 'hide': _uservalid }">{{ _usererror_label}}</span> -->
       <!-- </div> -->
